<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlayingFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:id="@+id/playerPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/play_pause_button"
        android:minHeight="64dp"
        android:minWidth="64dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_pause_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/nowPlayingImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/now_playing_image"
        android:src="@android:drawable/btn_dialog"
        app:layout_constraintBottom_toTopOf="@+id/nowPlayingProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nowPlayingStation" />

    <TextView
        android:id="@+id/nowPlayingTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dynamic_default"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nowPlayingAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nowPlayingAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/dynamic_default"
        app:layout_constraintBottom_toTopOf="@+id/nowPlayingArtist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nowPlayingArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dynamic_default"
        app:layout_constraintBottom_toTopOf="@+id/playerPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nowPlayingStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dynamic_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/nowPlayingProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/nowPlayingTrack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nowPlayingCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dynamic_default"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/nowPlayingProgress"
        app:layout_constraintTop_toBottomOf="@+id/nowPlayingProgress" />

    <TextView
        android:id="@+id/nowPlayingLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dynamic_default"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/nowPlayingProgress"
        app:layout_constraintTop_toBottomOf="@+id/nowPlayingProgress" />

</android.support.constraint.ConstraintLayout>